syntax = "proto3";

package admins;

message AdminDto{
    string name=1;
    string age=2;
}
 
message AdminDef{
    string message=1;
    bool status=2;
}

message StudentDef{
    string message=1;
    bool status=2;
}

message StudentDto{
    string name=1;
    string age=2;
    string rollNo=3;
}

message AdminResponse{
    string _id=1;
    string age=2;
    string name=3;
}

message AllStudentDef{
   repeated AdminResponse students=1;
}

message CreateAdminDto{
    string message=1;
}
message GetStudentDto{

}

service AdminService{
    rpc hi(CreateAdminDto) returns (CreateAdminDto){}
    rpc postStudent(AdminDto) returns(AdminDef){}
    rpc addStudent(StudentDto) returns (StudentDef){}
    rpc getStudents(GetStudentDto) returns (AllStudentDef){}
}